sas-core/main/default/objects/From_email_based_on_Dept_and_Teams__c/From_email_based_on_Dept_and_Teams__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>used to configure the from email address while replying to Case feed emails based on Department and Teams</description>
    <label>From email  based on Dept and Teams</label>
</CustomObject>