sas-core/main/default/objects/From_email_based_on_Dept_and_Teams__c/fields/Case_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Team__c</fullName>
    <label>Case_Team</label>
    <length>40</length>
    <type>Text</type>
</CustomField>