sas-core/main/default/objects/From_email_based_on_Dept_and_Teams__c/fields/From_Email__c.field-meta.xml
<CustomField>
    <fullName>From_Email__c</fullName>
    <label>From_Email</label>
    <type>Email</type>
</CustomField>